--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -13,6 +13,9 @@
             <h1><a href='/'>Snippetbox</a></h1>
         </header>
         {{template "nav" .}}
+        {{with .Flash}}
+                <div class='flash'>{{.}}</div>
+            {{end}}
         <main>
             {{template "main" .}}
         </main>
